--- a/assets/css/gamePage.css
+++ b/assets/css/gamePage.css
@@ -13,7 +13,6 @@ header{
 }
 
 .gameBox{
-    border: 4px inset gray;
     width: 100%;
     height: 100%;
     text-align: center;
@@ -22,7 +21,7 @@ header{
 .imageBox{
     width: 90%;
     height: 40vh;
-    border: 1px solid black;
+    border: 1px solid gray;
     margin: 3vh;
 }
 
