--- a/assets/css/gamePage.css
+++ b/assets/css/gamePage.css
@@ -37,8 +37,10 @@ header{
 }
 
 #my_camera{
-    width: 100%;
-    height: 35vh;
+    /*width: 100%;
+    height: 35vh;*/
+    width: 200px;
+    height: 200px;
     z-index: 1;
     display: none;
 }
