--- a/assets/css/gamePage.css
+++ b/assets/css/gamePage.css
@@ -58,8 +58,8 @@ header{
     }
 
     .gameImages{
-        width: 90%;
-        height: 80%;
+        width: 100;
+        height: 100;
     }
 
     #messageList{
@@ -72,3 +72,4 @@ header{
         font-size: 10px;
     }
 }
+
